force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Age__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Age__c</fullName>
    <description>Age of the member</description>
    <formula>IF ( OR ( MONTH (  FieloEE__Birthdate__c  ) &gt; MONTH (TODAY()), AND( MONTH ( FieloEE__Birthdate__c ) = MONTH (TODAY()), DAY ( FieloEE__Birthdate__c ) &gt;= DAY (TODAY()+1))), YEAR (TODAY()) - YEAR ( FieloEE__Birthdate__c ) -1, YEAR (TODAY()) - YEAR ( FieloEE__Birthdate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enter the age of the member.</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>