force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Agreement__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link for the agreement checked by the member</description>
    <label>Agreement</label>
    <referenceTo>FieloEE__Agreement__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>