force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Approved__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The approval status of this member. If you do not have an approval process, the status will be always "Yes".</description>
    <inlineHelpText>If you have an approval process for your members registration, the approval status is reflected in this field. If you do not have an approval process, the status will be always “Yes”.</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>