force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__ApprovedReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ApprovedReadOnly__c</fullName>
    <formula>IF(  FieloEE__Approved__c , IMAGE(&#39;/resource/&#39;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&#39;images/checked.png&#39;, $Label.fieloee__approved) , IMAGE(&#39;/resource/&#39;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&#39;images/unchecked.png&#39;, $Label.fieloee__notapproved) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved (Read Only)</label>
    <type>Text</type>
</CustomField>