force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Blocked__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>