force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__City__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__City__c</fullName>
    <description>The city where this member lives.</description>
    <inlineHelpText>Enter the city where the member lives.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>