force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__DaysLastTransaction__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__DaysLastTransaction__c</fullName>
    <description>Quantity of days from last transaction</description>
    <formula>TODAY()  -  FieloEE__LastTransactionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Transaction (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>