force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Email__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Email__c</fullName>
    <description>Email of this member.</description>
    <inlineHelpText>If you do not enter an email account, the system will create one of the form "name.lastname@fielo.com".</inlineHelpText>
    <label>E-Mail</label>
    <type>Email</type>
</CustomField>