force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Enabled__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this member participates of the program. "Enabled" members are members participating of the program; "Not enabled" members no longer participate of the program.</description>
    <inlineHelpText>All members are “Enabled” by default. When members are “Not enabled” they no longer participate of the program but they still remain members.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>