force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__EnabledStatusReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__EnabledStatusReadOnly__c</fullName>
    <formula>IF( FieloEE__Enabled__c , IMAGE(&#39;/resource/&#39;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&#39;images/checked.png&#39;, $Label.fieloee__enabled) , IMAGE(&#39;/resource/&#39;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&#39;images/unchecked.png&#39;, $Label.fieloee__notenabled) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enabled Status (Read Only)</label>
    <type>Text</type>
</CustomField>