force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__FirstName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FirstName__c</fullName>
    <description>First name of this member.</description>
    <inlineHelpText>Enter the first name of this member.</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>