force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Gender__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Gender__c</fullName>
    <description>The gender of this member.</description>
    <inlineHelpText>Enter the gender for this member.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>