force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Identification__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Identification__c</fullName>
    <formula>TEXT( FieloEE__IdentificationType__c )  +  FieloEE__IdentificationCode__c</formula>
    <label>Identification</label>
    <type>Text</type>
</CustomField>