force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__IdentificationType__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__IdentificationType__c</fullName>
    <description>The type of personal document of this member.</description>
    <inlineHelpText>Pick the type of personal document of this member.</inlineHelpText>
    <label>Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>