force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__LastName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__LastName__c</fullName>
    <description>Last name of this member.</description>
    <inlineHelpText>Enter the last name of this member.</inlineHelpText>
    <label>Last Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>