force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__LastTransactionDate__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__LastTransactionDate__c</fullName>
    <description>The date of the last transaction performed by this member.</description>
    <inlineHelpText>Enter the date of the last transaction performed by this member.</inlineHelpText>
    <label>Last Transaction Date</label>
    <type>Date</type>
</CustomField>