force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__LastTransactionDateReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__LastTransactionDateReadOnly__c</fullName>
    <description>Formula field to get the last transaction date.</description>
    <formula>FieloEE__LastTransactionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Transaction Date (Read Only)</label>
    <type>Date</type>
</CustomField>