force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Level__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The level of this member.</description>
    <inlineHelpText>Here you can see to what level the member belongs.</inlineHelpText>
    <label>Level</label>
    <referenceTo>FieloEE__Level__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>