force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__LevelReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__LevelReadOnly__c</fullName>
    <formula>FieloEE__Level__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level (Read Only)</label>
    <type>Text</type>
</CustomField>