force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__LoyaltyAge__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__LoyaltyAge__c</fullName>
    <description>Deprecated Field</description>
    <formula>(MONTH(TODAY()) + YEAR(TODAY()) * 12) - ( MONTH(FieloEE__StartDate__c) + YEAR(FieloEE__StartDate__c)* 12 ) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_deprecated_Loyalty Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>