force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__MediaPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MediaPoints__c</fullName>
    <label>Points Average</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>