force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__MemberCodeReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberCodeReadOnly__c</fullName>
    <formula>FieloEE__MemberCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Code (Read Only)</label>
    <type>Text</type>
</CustomField>