force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MobilePhone__c</fullName>
    <description>The cell phone number of this member.</description>
    <inlineHelpText>Enter the cell phone of the member.</inlineHelpText>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>