force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__NetPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__NetPoints__c</fullName>
    <description>Deprecated Field</description>
    <formula>FieloEE__Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_deprecated_Net Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>