force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__OperatorPassword__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__OperatorPassword__c</fullName>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Operator Password</label>
    <length>200</length>
    <type>Text</type>
</CustomField>