force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Phone__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Phone__c</fullName>
    <description>Phone number of this member.</description>
    <inlineHelpText>Enter the member&#39;s phone number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>