force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Points__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Points__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of points of this member.</description>
    <inlineHelpText>Here you can see the number of points of this member.</inlineHelpText>
    <label>Points</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>