force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__ProfileCompletenessReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ProfileCompletenessReadOnly__c</fullName>
    <description>Formula to get the profile completness</description>
    <formula>FieloEE__ProfileCompleteness__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Completeness (Read Only)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>