force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The program to which this member belongs.</description>
    <inlineHelpText>Select the program to which the member belongs.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloEE__Program__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>