force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__RedeemPointsPercent__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RedeemPointsPercent__c</fullName>
    <description>The percentage of points redeemed by this member.</description>
    <inlineHelpText>Here you can see the percentage of points redeemed by the member.</inlineHelpText>
    <label>Percent of Points Redeemed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>