force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__ReferalMember__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ReferalMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referal Member</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipLabel>Members Referrals</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>