force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__RegisteredReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RegisteredReadOnly__c</fullName>
    <formula>IF( FieloEE__Registered__c , IMAGE(&#39;/resource/&#39;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&#39;images/checked.png&#39;, $Label.fieloee__registered) , IMAGE(&#39;/resource/&#39;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&#39;images/unchecked.png&#39;, $Label.fieloee__notregistered) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Members are “Registered” if they have created an user in the members&#39; portal.</inlineHelpText>
    <label>Registered (Read Only)</label>
    <type>Text</type>
</CustomField>