force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__StartDateReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__StartDateReadOnly__c</fullName>
    <formula>FieloEE__StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date (Read Only)</label>
    <type>Date</type>
</CustomField>