force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Status__c</fullName>
    <formula>IF(   $User.IsActive == false  ,  $Label.fieloee__inactive , $Label.fieloee__active )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loyalty Program Status</label>
    <type>Text</type>
</CustomField>