force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Street__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Street__c</fullName>
    <description>The street where this member lives.</description>
    <inlineHelpText>Enter the street where the member lives.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>