force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__TotalRedeem__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TotalRedeem__c</fullName>
    <description>Number of orders redeemed by this member.</description>
    <inlineHelpText>Enter the number of redemption orders redeemed by this member.</inlineHelpText>
    <label>Total Orders Redeemed</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>