force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__TotalRedeemPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TotalRedeemPoints__c</fullName>
    <description>Number of points redeedmed by this member.</description>
    <inlineHelpText>Enter the total of points redeemed by this member.</inlineHelpText>
    <label>Total Points Redeemed</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>