force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__TotalRedeemValue__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TotalRedeemValue__c</fullName>
    <description>Total transactions (in currency) realized by the member</description>
    <label>Total Value Redeemed</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>