force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__TotalTransactions__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TotalTransactions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of transactions performed by this member.</description>
    <inlineHelpText>Enter the number of transactions performed by this member.</inlineHelpText>
    <label>Total Transactions</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>