force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__TotalValue__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TotalValue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Total Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>