force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Type__c</fullName>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
                <default>true</default>
                <label>Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>