force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__User__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user of this member in the members&#39; portal.</description>
    <inlineHelpText>Enter the member&#39;s user or handle in the member&#39;s portal.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>