force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__UserReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__UserReadOnly__c</fullName>
    <description>Formula link to user</description>
    <formula>HYPERLINK(&#39;/&#39; +  FieloEE__User__c ,  FieloEE__User__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User (Read Only)</label>
    <type>Text</type>
</CustomField>