force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__ZipCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ZipCode__c</fullName>
    <description>The zip code for this member.</description>
    <inlineHelpText>Enter the member&#39;s ZIP code.</inlineHelpText>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>