force-app/main/default/objects/FieloEE__Member__c/validationRules/FieloEE__BirthDate.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__BirthDate</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__Birthdate__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>FieloEE__Birthdate__c</errorDisplayField>
    <errorMessage>Birth date cannot be greater than today</errorMessage>
</ValidationRule>