force-app/main/default/objects/FieloEE__Member__c/validationRules/FieloEE__Modify_Member_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Modify_Member_Code</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(FieloEE__MemberCode__c)</errorConditionFormula>
    <errorDisplayField>FieloEE__MemberCode__c</errorDisplayField>
    <errorMessage>The member code cannot be modified</errorMessage>
</ValidationRule>