force-app/main/default/objects/FieloEE__Member__c/validationRules/FieloEE__RequiredCode.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__RequiredCode</fullName>
    <active>true</active>
    <errorConditionFormula>( ISPICKVAL( FieloEE__IdentificationType__c, &#39;&#39; ) &amp;&amp; ( FieloEE__IdentificationCode__c != &#39;&#39; ) ) || ( ! ISPICKVAL( FieloEE__IdentificationType__c, &#39;&#39; ) &amp;&amp; ( FieloEE__IdentificationCode__c == &#39;&#39; ) )</errorConditionFormula>
    <errorMessage>You must complete Identification type and Identification Number or neither of both</errorMessage>
</ValidationRule>