force-app/main/default/objects/FieloEE__Member__c/listViews/FieloEE__All_Members.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Members</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Program__c</columns>
    <columns>FieloEE__Name__c</columns>
    <columns>FieloEE__Email__c</columns>
    <columns>FieloEE__PointsReadOnly__c</columns>
    <columns>FieloEE__Level__c</columns>
    <columns>FieloEE__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Members</label>
    <language>en_US</language>
</ListView>