force-app/main/default/objects/FieloEE__Member__c/listViews/FieloEE__InactiveMembers.listView-meta.xml
<ListView>
    <fullName>FieloEE__InactiveMembers</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__UserReadOnly__c</columns>
    <columns>FieloEE__LastTransactionDateReadOnly__c</columns>
    <columns>FieloEE__Name__c</columns>
    <columns>FieloEE__LevelReadOnly__c</columns>
    <columns>FieloEE__IdentificationType__c</columns>
    <columns>FieloEE__IdentificationCode__c</columns>
    <columns>FieloEE__MemberCode__c</columns>
    <columns>FieloEE__Points__c</columns>
    <columns>FieloEE__LastTransactionDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieloEE__IsActive__c</field>
        <operation>equals</operation>
        <value>False</value>
    </filters>
    <label>Inactive Members</label>
    <language>en_US</language>
</ListView>