force-app/main/default/objects/FieloEE__Member__c/listViews/FieloEE__New_Last_Week.listView-meta.xml
<ListView>
    <fullName>FieloEE__New_Last_Week</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Name__c</columns>
    <columns>FieloEE__Level__c</columns>
    <columns>FieloEE__MemberCode__c</columns>
    <columns>FieloEE__Age__c</columns>
    <columns>FieloEE__Points__c</columns>
    <columns>FieloEE__LoyaltyAge__c</columns>
    <columns>FieloEE__StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>New Last Week</label>
    <language>en_US</language>
</ListView>